--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Star Chess Club</title>
+    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/0df7b1e125.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="section" id="home">
+
         <h1 class="text" id="title">Bring out your inner chess strategist and change your game.</h1>
         <h2 class="text" id="description">Take your chess to another level by enrolling in the chess club and dominate your opponenets</h2>
         <div class="btn-container">
@@ -26,6 +28,7 @@
             <a href="#contact-page" class="link"><button class="btn" id="contact">Contact</button></a>
             <a href="#feedback" class="link"><button class="btn-1" id="feedback">Feedbacks</button></a>
         </div>
+        <img src="./assets/char.jpeg" alt="" class="hemant">
     </div>
     <div class="section" id="contact-page">
         <h1 class="text" id="contact-title">Contact</h1>
@@ -34,12 +37,12 @@
             <div class="card-body">
                 <h1 class="card-title">Phone Number</h1>
                 <h1 class="card-description">If you would like to contact me using mobile here's my number </h1>
-                <button class="btn-1" id="phone-btn">9999999999</button>
+                <button class="btn-1" id="phone-btn">+91 9958867562</button>
             </div>
             <div class="card-body">
                 <h1 class="card-title">Email</h1>
                 <h1 class="card-description">If you would like to contact me using email here's my email </h1>
-                <button class="btn-1" id="email-btn">hemantsir@gmail.com</button>
+                <button class="btn-1" id="email-btn">Tewatia251@gmail.com</button>
             </div>
             <div class="card-body">
                 <h1 class="card-title">Social</h1>
@@ -52,9 +55,79 @@
             </div>
         </div>
     </div>
-    <div class="section" id="feedback">
-        <h1 class="text" id="feedback-title">What Students Say</h1>
-        <h2 class="text" id="feedback-description">Read Testimonials from my excelling students</h2>
+ 
+
+<section class="t-bq-section" id="jasper">
+    <div class="t-bq-wrapper t-bq-wrapper-boxed">
+        <div class="t-bq-quote t-bq-quote-jasper">
+            <div class="t-bq-quote-jasper-pattern">
+                <div class="t-bq-quote-jasper-qmark">
+                    &#10077;
+                </div>
+            </div>
+
+            <div class="t-bq-quote-jasper-userpic"></div>
+
+            <div class="t-bq-quote-jasper-base">
+                <blockquote class="t-bq-quote-jasper-text" cite="Strugatsky Brothers">
+                        "I have known Hemant sir for almost 5 years now, he has always been harsh on me. But now that I look back, it was for the best, he was the one who managed to bring out the potential from within me and boosted my confidence when I was feeling low, not only that but he also taught me several openings, counters to certain openings as well as several gambits for which I am eternally grateful, He has played a significant role in my chess journey, and I can only thank him for helping shape who I am today."                </blockquote>
+                <div class="t-bq-quote-jasper-meta">
+                    <div class="t-bq-quote-jasper-meta-info">
+                        <div class="t-bq-quote-jasper-author"><cite>Ridit Popli</cite></div>
+                        <div class="t-bq-quote-jasper-source"><span>Student since 5 years</span></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="t-bq-quote t-bq-quote-jasper">
+            <div class="t-bq-quote-jasper-pattern">
+                <div class="t-bq-quote-jasper-qmark">
+                    &#10077;
+                </div>
+            </div>
+
+            <div class="t-bq-quote-jasper-userpic"></div>
+
+            <div class="t-bq-quote-jasper-base">
+                <blockquote class="t-bq-quote-jasper-text" cite="Strugatsky Brothers">
+                    Hemant Sir has played a major role in my chess journey I have been learning chess since 5 years and his way of teaching chess incorporates fun and makes the most boring theory lesson seem fun. He's a believer of practice makes perfect.
+                </blockquote>
+                <div class="t-bq-quote-jasper-meta">
+                    <div class="t-bq-quote-jasper-meta-info">
+                        <div class="t-bq-quote-jasper-author"><cite>Akshat Hatwal</cite></div>
+                        <div class="t-bq-quote-jasper-source"><span>Student Since 5 years </span></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="t-bq-quote t-bq-quote-jasper">
+            <div class="t-bq-quote-jasper-pattern">
+                <div class="t-bq-quote-jasper-qmark">
+                    &#10077;
+                </div>
+            </div>
+
+            <div class="t-bq-quote-jasper-userpic"></div>
+
+            <div class="t-bq-quote-jasper-base">
+                <blockquote class="t-bq-quote-jasper-text" cite="Strugatsky Brothers">
+                    "I'm loving chess lessons! My coach is super friendly and explains everything clearly. I already feel smarter about the game and can't wait to improve!"                </blockquote>
+                <div class="t-bq-quote-jasper-meta">
+                    <div class="t-bq-quote-jasper-meta-info">
+                        <div class="t-bq-quote-jasper-author"><cite>Arav Talwar</cite></div>
+                        <div class="t-bq-quote-jasper-source"><span> Most Recent Student  </span></div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+</section>
+
+
+
+
+    <script src="https://unpkg.com/lenis@1.1.9/dist/lenis.min.js"></script> 
+    <script src="./script.js"></script>
 </body>
 </html>
